fixed some spacing

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -168,9 +168,6 @@ nav {
 main {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr 2fr;
-  /* grid-template-columns: 1fr; */
-  /* grid-gap: 5px; */
-  /* background-color: #606c38; */
   font-family: "Lora", serif;
   text-align: center;
   margin: 5px;
@@ -179,7 +176,6 @@ main {
 main picture.hero {
   width: 100%;
   margin: 0 0 0 0;
-  /* background-color: #606c38; */
   position: relative;
   grid-row: 1/2;
   align-self: center;
@@ -220,29 +216,58 @@ main ul {
 }
 
 /*-------- discover.html main -------*/
-/* main .discover-grid {
-  display: flex;
-  flex-direction: column;
-} */
+.discover-grid {
+  display: grid;
+  grid-template-rows: 0.5fr 9fr;
+  grid-template-columns: 1fr;
+}
+
+.discover-stats {
+  grid-row: 1/2;
+}
 
 .gallery {
-  grid-row: 1/6;
+  grid-row: 2/3;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
 }
 .gallery picture {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 10px;
+  background-color: #cbccc7;
+  border-radius: 5px;
+  border: 2px solid #555;
+  align-items: center;
+  margin: 0px;
 }
 
-.golden-gallery img {
+.golden-gallery img[data-src] {
+  filter: blur(0.5em);
+  width: 300px;
   /* grid-column: 1/3; */
   justify-self: center;
   align-self: center;
   text-align: center;
 }
 
+.golden-gallery img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  filter: blur(0em);
+  transition: filter 3s;
+}
+
 .golden-gallery:hover {
   opacity: 0.5;
+}
+
+.gallery-description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0px 20px 0px 20px;
 }
 
 /* .gallery-description { */
